PDI-2830: Allow for flexible optimization of JVM options for use with PDI (e.g. -Xmx, -server options, Garbage Collector, Excessive GC Time)
git-svn-id: svn://source.pentaho.org/svnkettleroot/Kettle/trunk@14058 5fb7f6ec-07c1-534a-b4ca-9155e429e800